Fix: Ran css through validator and found some errors linked to elegant-form. Edited the border style to not require 2 transparent settings and instead have only a bottom border entirely rather than bottom visible border.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -200,9 +200,9 @@ body {
 
 .elegant-form {
 	background: transparent;
-	border-color: transparent;
+	border: 0;
+    border-bottom: 1px solid;
 	border-bottom-color: #fff9f1;
-	border-bottom-style: solid;
 	color: #fff9f1;
 	padding-left: 0;
 }
@@ -231,7 +231,6 @@ body {
 .elegant-form:-webkit-autofill:active {
 	transition: background-color 5000s;
 	-webkit-text-fill-color: #fff9f1;
-	-webkit-transition-property: background-color !important;
 }
 
 .form-warning {
